# all-the-functions

./: .gitignore  Picksell.cabal  README.md  stack.yaml
src/: Button.hs  Convolutions.hs  CssStyle.hs  Dialogue.hs  FileChooser.hs  Main.hs  Window.hs
src/style/: gui.glade  style.css
